[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "SGE"
version = "0.3.0"
description = "Simulation/Game Editor"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "Nicolas Becu" },
  { name = "Marine Regien" },
  { name = "Alexis Ossant" }
]
dependencies = [
    "matplotlib>=3.9.2",
    "numpy>=2.1.2",
    "openpyxl>=3.1.5",
    "paho-mqtt>=2.1.0",
    "pandas>=2.2.3",
    "pyparsing>=3.1.4",
    "PyQt5>=5.15.11",
    "pyrsistent>=0.20.0",
    "pywin32>=307",
    "screeninfo>=0.8.1",
    "SQLAlchemy>=2.0.35",
    "tzdata>=2024.2"
]

[tool.setuptools]
packages = ["SGE"]

[tool.setuptools.package-dir]
SGE = "."


